html5 video test

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   </head>
   <body>
     <header></header>
-    <main> Hello </main>
+    <main> This is a html5 video trial
+        <video width="1280" height="720" autoplay>
+            <source src="Videos/DenonDemo.mp4" type="video/mp4">
+            <source src="Videos/DenonDemo.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+        </video>
+    </main>
     <footer></footer>
   </body>
 </html>
