--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="">
+<html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Video example</title>
   </head>
   <body>
-    <header></header>
-    <main> This is a html5 video trial
-    </main>
+    <h1>Below is a video that will play in all modern browsers</h1>
     <video width="1280" height="720" autoplay>
-        <source src="Videos/DenonDemo.mp4" type="video/mp4">
+        <source src="/Videos/DenonDemo.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <footer></footer>
   </body>
 </html>
