--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Below is a video that will play in all modern browsers</h1>
-    <video width="1280" height="720" autoplay>
+    <video controls>
         <source src="/Videos/DenonDemo.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
