--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@ Your browser does not support the video tag.
 
 <p>Video from Twitch</p>
 
+<iframe
+   src="https://player.twitch.tv/?video=1253620109&parent=streamernews.example.com&autoplay=false"
+   height="200"
+   width="360"
+   allowfullscreen="true">
+</iframe>
+
 
 <p>Video from YouTube</p>
 
