--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Your browser does not support the video tag.
 <p>Video from Twitch</p>
 
 <iframe
-   src="https://player.twitch.tv/?video=1253620109&parent=streamernews.example.com&autoplay=false"
+   src="https://player.twitch.tv/?video=1253620109&parent=toszlanyi.github.io&autoplay=false"
    height="200"
    width="360"
    allowfullscreen="true">
