--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Video from Twitch</p>
 
         <iframe
-            src="https://player.twitch.tv/?channel=rhythmandtone_official&parent=github.io"
+            src="https://player.twitch.tv/?channel=rhythmandtone_official&parent=https:/toszlanyi.github.io"
             height="200"
             width="360">
         </iframe>
